# Scout

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  mcp_start.sh  opencode.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.beads/: dolt-server.activity  last-touched  metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
.beads/dolt/: .beads-credential-key  config.yaml
.beads/dolt/.dolt/: sql-server.info
.beads/dolt/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/.dolt/stats/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/sc/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/hooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
logs/: .ec7a2d873bf95ffe340793845f1b6c855005664c-audit.json
scout/: __init__.py  cli.py  config.py  server.py
src/: index.ts  lcp.ts  types.ts
src/browser/: a11y.ts  discovery.ts  engine.ts  healer.ts  som.ts
src/tools/: click.ts  drag.ts  elements.ts  handoff.ts  hover.ts  login.ts  nav_extra.ts  navigate.ts  press_key.ts  screenshot.ts  scroll.ts  select.ts  session.ts  snapshot.ts  tabs.ts  type.ts  wait.ts
