[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scout"
version = "0.1.0"
description = "Job intelligence service — monitors postings, filters and reports via AI agents"
requires-python = ">=3.12"
authors = [
    { name = "Lautrek" }
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # HTTP client
    "httpx>=0.27.0",

    # Data validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",

    # LLM
    "anthropic>=0.32.0",
    "tiktoken>=0.7.0",

    # CLI
    "typer>=0.12.0",

    # Utils
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
scout = "scout.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["scout"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
